k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-credential
  labels:
    name: kube-credential
    app.kubernetes.io/name: kube-credential
    app.kubernetes.io/version: "1.0.0"
